fix: :bug: LAST COMMIT?? 😳
Fixed the weird gap at the bottom in mobile. Various minor fixes.

--- a/public/about.css
+++ b/public/about.css
@@ -20,7 +20,7 @@ body {
 .intro_text {
   border-radius: 50px;
   font-family: sans-serif;
-  background: hsla(0, 0%, 0%, 0.5);
+  background: hsla(0, 0%, 0%, 0.7);
   padding: 30px;
   width: 100%;
   height: 50%;
